--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "buscaminasprueba",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "report": "node --experimental-vm-modules node_modules/jest/bin/jest.js --json --outputFile=reports/report.json",
     "test": "jest",
     "dev": "vite",
     "build": "vite build",
@@ -11,19 +11,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jest": "^29.7.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "jsdom": "^24.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.55.0",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "postcss": "^8.4.35",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.70.0",
     "vite": "^5.0.8"
   }
